--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         </div>
     </section>
     <section id="photos">
-        <div class="card">
-            <h2>Фотогалерея</h2>
-            <img src="https://via.placeholder.com/600x300?text=%D0%A8%D0%BA%D0%BE%D0%BB%D0%B0" alt="Фото школи">
-            <img src="https://via.placeholder.com/600x300?text=%D0%9A%D0%BB%D0%B0%D1%81" alt="Фото класу">
-        </div>
+    <div class="card">
+        <h2>Фотогалерея</h2>
+        <img src="school.jpg" alt="Фото школи">
+        <img src="class.jpg" alt="Фото класу">
+    </div>
     </section>
     <section id="schedule">
         <div class="card">
