--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     <section id="photos">
     <div class="card">
         <h2>Фотогалерея</h2>
-        <img src="school.jpg" alt="Фото школи">
-        <img src="class.jpg" alt="Фото класу">
+        <img src="images/school.jpg" alt="Фото школи">
+        <img src="images/class.jpg" alt="Фото класу">
     </div>
     </section>
     <section id="schedule">
